# Coursera_CPP_Bioinformatics

./: .gitignore  CMakeLists.txt  calc_num_subpeps.cpp  convolution_cyclopeptide_sequencing.cpp  convolution_cyclopeptide_sequencing_all.cpp  convolve_spectrum.cpp  cyclic_spectrum.cpp  cyclopeptide_scoring.cpp  cyclopeptide_sequencing.cpp  frame_search.cpp  leaderboard_cyclopeptide_sequencing.cpp  leaderboard_cyclopeptide_sequencing_all.cpp  leaderboard_cyclopeptide_sequencing_all_extended.cpp  linear_peptide_scoring.cpp  linear_spectrum.cpp  main.cpp  peps_with_mass.cpp  peptide.cpp  peptnumseq.cpp  test2.txt  translate.cpp  trim_seqs.cpp
challenges/: TyrocidineB1.txt  dataset_100_6.txt  dataset_102_3.txt  dataset_102_8.txt  dataset_104_4.txt  dataset_104_7.txt  dataset_4912_2.txt  dataset_4913_1.txt  dataset_4913_3.txt  dataset_96_4.txt  dataset_96_7.txt  dataset_98_4.txt  linear_score.txt  output_100_6.txt  output_104_4.txt  output_4912_2.txt  output_96_4.txt  output_96_7.txt  output_98_4.txt  test.txt
