cmake_minimum_required(VERSION 3.6)
project(Coursera2)

set(CMAKE_CXX_STANDARD 11)
add_executable(translate translate.cpp)
add_executable(peptide_numseqs peptnumseq.cpp)
add_executable(frame_search frame_search.cpp)
add_executable(linear_spectrum linear_spectrum.cpp)
add_executable(cyclic_spectrum cyclic_spectrum.cpp)
add_executable(cyclopeptide_sequencing cyclopeptide_sequencing.cpp)
add_executable(calc_num_subpeps calc_num_subpeps.cpp)
add_executable(peps_with_mass peps_with_mass.cpp)
add_executable(cyclopeptide_scoring cyclopeptide_scoring.cpp)
add_executable(linear_peptide_scoring linear_peptide_scoring.cpp)
add_executable(trim_seqs trim_seqs.cpp)
add_executable(leaderboard_cyclopeptide_sequencing leaderboard_cyclopeptide_sequencing.cpp)
add_executable(leaderboard_cyclopeptide_sequencing_all leaderboard_cyclopeptide_sequencing_all.cpp)
add_executable(leaderboard_cyclopeptide_sequencing_all_extended leaderboard_cyclopeptide_sequencing_all_extended.cpp)
add_executable(convolve_spectrum convolve_spectrum.cpp)
add_executable(convolution_cyclopeptide_sequencing convolution_cyclopeptide_sequencing.cpp)
add_executable(convolution_cyclopeptide_sequencing_all convolution_cyclopeptide_sequencing_all.cpp)